[package]
name = "some-cache"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
prometheus = { workspace = true }
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
moka = { version =  "0.12.10", features = ["future", "sync"] }
fastrand = "2.4.1"
zstd = "0.13.3"
once_cell.workspace = true

[lints]
workspace = true
